--------------------------------------------------------------------------
---------                Ampache -- CHANGELOG                    ---------   
--------------------------------------------------------------------------

--------------------------------------------------------------------------
  v.3.5-Alpha1
	- Fixed album art not clearing thumbnail correctly on gather 
	- Fixed localplay instance not displaying correctly after change
		until a page refresh
	- Fixed endless loop on index if you haven't played a song in 
		over two years
	- Fixed gather art and parse m3u not working on catalog create
		also added URL read support to m3u import
	- Upped Minimum requirements to Mysql 5.x
	- Add codeunde1load's Web 2.0 style tag patch
	- Fixed typo in e-mail From: name (Thx Xgizzmo)
	- Fixed typo in browse auto_init() which could cause ampache to not
		remember your start point in some situations. (Thx Xgizzmo)

--------------------------------------------------------------------------
  v.3.4 05/10/2008 
	- Fixed an issue where the plugins could be installed infinite times
		if you kept refreshing the install page causing them to break
	- Fixed a problem with creating new preferences using the class
		functions, and also looking up setable preferences
	- Fixed user creation allowing empty password, when login prohibits 
		login without a password
	- Fixed an issue with the config file generation and upped the config
		file version to force everyone to get new config files. 
	- Tweak Pruning of Temporary Playlists so it only happens sometimes, 
		not on every single login. This might lead to a larger db but
		should increase login speed
	- Fixed an issue where the prefixes on albums were not being included
		when checking for an existing album. 
	- Fixed get recently played not correctly limiting to specified user
		(Thx Xgizzmo)
	- Fixed lack of refresh of controls when switching between localplay
		and other play methods