@@ -4,6 +4,9 @@
 
 --------------------------------------------------------------------------
   v.3.5-Alpha1
+	- Ignore getid3() iconv stuff doesn't seem to work
+	- Improved fix_filenames.inc, tries a translation first then strips
+		invalid characters 
 	- Fixed album art not clearing thumbnail correctly on gather 
 	- Fixed localplay instance not displaying correctly after change
 		until a page refresh
